register and login page

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,9 @@ spring:
   main:
     banner-mode: off
 
+  liquibase:
+    change-log: classpath:db/changelog/changelog-master.xml
+
 server:
   error:
     include-message: always
