Changes by Богдан

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     suffix: .html
 
   datasource:
-    password: postgres
+    password: 208634
     url: jdbc:postgresql://localhost:5432/interactio_db
     username: postgres
     driver-class-name: org.postgresql.Driver
